# GraphReasoning

./: .python-version  BOTTOMUP_LLM_QUICK_REFERENCE.md  CQ_ONTOLOGY_METHODS_QUICK_REFERENCE.md  DGGS_DISCRETIZATION_GUIDE.md  DGGS_HIERARCHICAL.md  DGGS_SPATIAL_RELATIONS_GUIDE.md  DISCRETIZED_TO_KG_GUIDE.md  DISCRETIZED_TO_KG_QUICK_REFERENCE.md  FUNCTION_REMOVAL_SUMMARY.md  GRAPH_CONSTRUCT_GUIDE.md  GRAPH_CONSTRUCT_QUICK_REFERENCE.md  GRAPH_SCHEMA_USAGE.md  IMPORT_MIGRATION_COMPLETE.md  LLM_PACKAGE_README.md  METHOD_PARAMETER_SUPPORT.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  ONTO_GENERATION_CHECKLIST.md  ONTO_GENERATION_GUIDE.md  ONTO_GENERATION_IMPLEMENTATION_SUMMARY.md  ONTO_GENERATION_INTEGRATION_GUIDE.md  ONTO_GENERATION_QUICK_REFERENCE.md  POINT_QUICK_REFERENCE.md  POLYLINE_QUICK_REFERENCE.md  RASTER_DISCRETIZATION_GUIDE.md  RASTER_QUICK_REFERENCE.md  README.md  SPATIAL_UTILS_QUICK_REFERENCE.md  SSURGO_DISCRETIZATION_GUIDE.md  SSURGO_QUICK_REFERENCE.md  TRIPLE_EXTRACTOR_GUIDE.md  TRIPLE_EXTRACTOR_QUICK_REFERENCE.md  main.py  prompt_template_examples.py  pyproject.toml  test_bottomup_llm.py  test_dggs_hierarchical.py  test_dggs_spatial_relations.py  test_discretized_to_kg_integration.py  test_method_parameter.py  (+3 more)
.git.bak/: config  index  packed-refs
DGGS/: __init__.py  discretizer_point.py  discretizer_polygon.py  discretizer_polyline.py  discretizer_raster.py  spatial_utils.py  topo_enrichment.py
Dggs/: __init__.py  dggs.py  discretized_to_kg.py  discretizer_point.py  discretizer_polygon.py  discretizer_polyline.py  discretizer_raster.py  spatial_utils.py  (+1 more)
(+63 files in other folders)
